@@ -45,10 +45,12 @@ importFrom(raster,mask)
 importFrom(raster,overlay)
 importFrom(raster,predict)
 importFrom(raster,raster)
+importFrom(raster,readAll)
 importFrom(raster,reclassify)
 importFrom(raster,res)
 importFrom(raster,resample)
 importFrom(raster,stack)
+importFrom(raster,values)
 importFrom(raster,writeRaster)
 importFrom(rpart,rpart)
 importFrom(rpart,rpart.control)
