@@ -97,6 +97,8 @@ ui <- dashboardPage(dashboardHeader(title = 'SSDM'),
                                              uiOutput('uncertinfoUI'),
                                              uiOutput('endemismUI'),
                                              uiOutput('endemisminfoUI'),
+                                             uiOutput('endemismrangeUI'),
+                                             uiOutput('endemismrangeinfoUI'),
                                              uiOutput('metricUI'),
                                              uiOutput('metricinfoUI'),
                                              uiOutput('methodUI'),
